--- a/database.html
+++ b/database.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="database.css" />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-    <script src="randomimg.js"></script>    
+    <script src="randomimg.js"></script>    /Хуй
     <script src="scripts.js"></script>  
     <script src="timer.js"></script>
     <script src="menuHighlight.js"></script>
